# modgen

./: .gitignore  README.md  README_RELEASE.md  electron-builder.yml  gradlew  gradlew.bat  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
docs/: CHANGELOG.md  USER_GUIDE.md
modgen/: __init__.py  exceptions.py  openai_client.py  project_manager.py  prompt.py  response.py  validation_engine.py
scripts/: copy-renderer-assets.mjs
src/: preload.ts
src/ai/: endpoint.ts  recovery.ts
src/assets/: assetStore.ts  paths.ts  validateTextures.ts
src/datapack/: generator.ts
src/main/: index.ts  main.ts  openaiHandler.ts  preload.ts  updates.ts
src/project/: backups.ts  projectManager.ts
src/renderer/: App.css  App.tsx  index.css  index.html  index.tsx  main.tsx
src/renderer/components/: AIPanel.tsx  AssetPanel.tsx  BuildLog.tsx  Editor.tsx  OpenInIDE.tsx  Settings.tsx  SettingsPanel.tsx  VersionSelector.tsx
src/security/: secureStore.ts
src/stonecutter/: projects.json  scaffold.ts
src/styles/: theme.css
src/types/: electron-updater.d.ts  monaco-editor-react.d.ts
src/validation/: gradleCheck.ts  validator.ts
stonecutter/: projects.json
tests/: test_openai_client.py  test_project_manager.py  test_prompt.py  test_validation_engine.py
