[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "modgen"
version = "0.1.0"
description = "Local filesystem-backed project management utilities"
readme = "README.md"
authors = [{ name = "Modgen Team" }]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
